[package]
name    = "BSP-Strom-Mapa"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow          = "1"
cgmath          = "0.18"
egui            = "0.29"
three-d         = { version = "0.18", features = ["window", "egui-gui"] }
three-d-asset   = "0.9"
rfd             = "0.9"
gltf            = { version = "1.4", features = ["extras", "names"] }
rayon           = "1.10.0"
wgpu            = "0.20.1"
bytemuck        = { version = "1.14", features = ["derive"] }
futures         = "0.3.30"
